CSS : fixed login page on mobile

--- a/ressources/css/principaux.css
+++ b/ressources/css/principaux.css
@@ -13,8 +13,10 @@ html, body {
 	background-image:url("/ressources/images/background-login.jpg");
 	background-position: center center ;
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 	background-color: #00435e;
 	height:100%;
+	min-height: 800px;
 	position:relative;
 	background-size: cover ;
 }
